<resources>
    <string name="memolist_btnSave">Save</string>
    <string name="memolist_listview_lblLearned">Learned:</string>
    <string name="memolist_listview_lblAdded">Added:</string>
    <string name="memolist_listview_lblLastReview">Last reviewed:</string>
    <string name="memolist_listview_lblRepeated">Repeated:</string>
    <string name="memolist_from">From</string>
    <string name="memolist_to">To</string>
    <string name="memolist_saveErrorMessage">Failed to save memo</string>
    <string name="memolist_ctxmenu_delete">Delete</string>
    <string name="memolist_ctxmenu_deleteTitle">Warning!</string>
    <string name="memolist_ctxmenu_deleteQuestion">Are you sure? Once deleted, it will not be possible to recover old memo. Consider deactivating.</string>
    <string name="memolist_ctxmenu_deleteYes">Yes, I am sure.</string>
    <string name="memolist_ctxmenu_deleteNo">No, I have changed my mind.</string>
    <string name="memolist_missingWords">Please provide expressions in correct format. Use \':\' as a separator.</string>
    <string name="memolist_goToLibraries">Go to libraries</string>
    <string name="memolist_options">Options</string>
    <string name="memolist_startTraining">Start training</string>
    <string name="memolist_whatsNewTitle">What\'s new (v. %s)</string>
    <string name="memolist_whatsNewContent">This is first version of Memoling!\n\nIf you would like to translate the application please do not hesitate to contact me.</string>
    <string name="memolist_whatsNewOk">OK</string>
    <string name="memolist_updateCrash">Failed to update the db!</string>
    <string name="memobaselist_listview_lblCreated">Created</string>
    <string name="memobaselist_listview_lblMemos">Memos</string>
    <string name="memobaselist_tap_close">Please tap again to exit</string>
    <string name="memobaselist_setting_settings">Settings</string>
    <string name="memobaselist_setting_newLibrary">New library</string>
    <string name="memobaselist_ctxmenu_delete">Delete library</string>
    <string name="memobaselist_ctxmenu_deleteImpossible">You need to have at least one library!</string>
    <string name="memobaselist_ctxmenu_deleteImpossibleOK">OK</string>
    <string name="memobaselist_ctxmenu_deleteTitle">Warning!</string>
    <string name="memobaselist_ctxmenu_deleteQuestion">Are you sure? Once deleted, it will not be possible to recover old library. Consider deactivating.</string>
    <string name="memobaselist_ctxmenu_deleteYes">Yes, I am sure.</string>
    <string name="memobaselist_ctxmenu_deleteNo">No, I have changed my mind.</string>
    <string name="memobaselist_ctxmenu_options">Options</string>
    <string name="memobaselist_lblNewMemoBase">New library</string>
    <string name="memobaselist_lblSync">Sync</string>
    <string name="memobaselist_setting_about">About</string>
    <string name="memobaselist_setting_onlineLib">Online libraries</string>
    <string name="memobaselist_fbFailed">Failed to obtain credentials.</string>
    <string name="memobaselist_setting_statistics">Statistics</string>
    <string name="memo_lblCreated">Created:</string>
    <string name="memo_lblLastReviewed">Last reviewed:</string>
    <string name="memo_lblDisplayed">Displayed:</string>
    <string name="memo_lblCorrectAnswered">Correctly answered:</string>
    <string name="memo_lblwordA">First part:</string>
    <string name="memo_lblLangA">First part language:</string>
    <string name="memo_lblWordB">Second part:</string>
    <string name="memo_lblLangB">Second part language:</string>
    <string name="memo_lblActive">Active</string>
    <string name="memo_lblSave">Save</string>
    <string name="memo_lblSaving">Saving&#8230;</string>
    <string name="memobase_lblStartTraining">Start training</string>
    <string name="memobase_lblShowList">Show list</string>
    <string name="memobase_lblImport">Import</string>
    <string name="memobase_lblExport">Export</string>
    <string name="memobase_lblPublish">Publish</string>
    <string name="memobase_lblScheduler">Set scheduler</string>
    <string name="memobase_lblNoActive">No. active</string>
    <string name="memobase_lblNoAll">No. all</string>
    <string name="memobase_lblCreated">Created</string>
    <string name="memobase_lblLastReviewed">Last reviewed</string>
    <string name="memobase_lblActive">Active</string>
    <string name="memobase_lblName">Library Name</string>
    <string name="memobase_lblSave">Save</string>
    <string name="memobase_lblProcessing">Processing&#8230;</string>
    <string name="memobase_getFileError">Failed to load a file</string>
    <string name="memobase_exported">File has been saved at location: </string>
    <string name="memobase_newMemoBase">New library</string>
    <string name="memobase_inoutTitle">Select format</string>
    <string name="memobase_inoutConfirm">Confirm</string>
    <string name="memobase_importCompleted">Successfully imported %s file</string>
    <string name="memobase_importFailed">Failed to import %s file</string>
    <string name="memobase_uploadSuccess">Successfully uploaded library!</string>
    <string name="memobase_errorAuth">Authentication error!</string>
    <string name="memobase_errorMin">Your library has to have at least 20 entries to be uploaded</string>
    <string name="memobase_error">Error occurred</string>
    <string name="memobase_lblLibraryName">Library name</string>
    <string name="memobase_lblGenre">Genre</string>
    <string name="memobase_lblDescription">Description</string>
    <string name="memobase_btnUpload">Upload</string>
    <string-array name="memobase_exportList">
        <item>Memoling file (default)</item>
        <item>CSV file (more readable)</item>
        <item>Evernote</item>
    </string-array>
    <string-array name="memobase_importList">
        <item>Memoling file (default)</item>
        <item>CSV file (more readable)</item>
    </string-array>
    <string name="memobase_exportFailure">Failed to export file.</string>
    <string name="memobase_exportSuccess">Successfully exported file: </string>
    <string name="memobase_importConflict">Conflict</string>
    <string-array name="memobase_conflict">
        <item>Take newer (if possible)</item>
        <item>Ignore file</item>
        <item>Take file</item>
        <item>Cancel</item>
    </string-array>
    <string name="memobase_conflictCancel">Cancel Import</string>
    <string name="memobase_conflictApplyToAll">Apply to all</string>
    <string name="memobase_conflictApplyOnce">Apply once</string>
    <string name="memobase_evernoteNotInstalled">Evernote not found!</string>
    <string name="memobase_evernoteExportSuccess">Exported to Evernote</string>
    <string name="review_lblMemos">Memos:</string>
    <string name="review_lblNext">Next</string>
    <string name="review_lblCorrect">Correct</string>
    <string name="review_lblIncorrect">Incorrect. Answer:\n%s</string>
    <string name="review_lblLanguage">Language</string>
    <string name="review_noMemos">No memos found</string>
    <string name="statisitcs_yearTitle">Memos added in current year</string>
    <string name="statisitcs_monthTitle">Number of revision per month in current year</string>
    <string name="statistics_tabcombined_statistics">Statistics</string>
    <string name="statistics_tabcombined_totalMemos">Total number of memos:</string>
    <string name="statistics_tabcombined_libraries">Libraries:</string>
    <string name="statistics_tabcombined_totalRepetition">Total number of repetitions:</string>
    <string name="statistics_tabcombined_avgPerformance">Average performance:</string>
    <string name="statistics_tabcombined_mostRepeated">Most repeated expr.:</string>
    <string name="statistics_tabcombined_mostRepatedNo">Most repeated expr. repetitions:</string>
    <string name="statistics_tabcombined_leastRepeated">Least repeated expr.:</string>
    <string name="statistics_tabcombined_leastRepeatedNo">Least repeated expr. repetitions:</string>
    <string name="statistics_tabcombined_longestWord">Longest expr.:</string>
    <string name="statistics_tabcombined_shortestWord">Shortest expr.:</string>
    <string name="about_donatePlease">Please donate</string>
    <string name="about_donateReason">Why donate?\n1. So <b>you</b> can use it - covers translations and hosting costs.\n2. Keep application ad-free and up to date.\n3. So <b>I</b> can get filthy rich.</string>
    <string name="about_lblDonate">Donate</string>
    <string name="about_uselessFacts">Useless facts</string>
    <string name="about_uselessFactsContent">Device side was developed in Java and C#. Web services in PHP (tried in ruby though). There is approx. +<b>%1$d</b> line of code. Lookup dictionary contains 246957 words. No animals were harmed during software development. You are visiting <b>%2$s</b> time this page. If you need a set of random numbers: 1, 1, 1, 1 &#8211; your welcome (truly random distribution). The biggest even prime number: 2. While you are reading this text %3$1.4f Americans have got injured using toilet. Coconuts kill a human every 2.433333333333 days. </string>
    <string name="about_lblDonateDelux">Donate DELUX</string>
    <string name="about_version">Version %s</string>
    <string name="download_published_genre">Genre</string>
    <string name="download_published_memos">Memos</string>
    <string name="download_published_downloads">Downloads</string>
    <string name="download_published_language">Pri. Lang.</string>
    <string name="download_preview_language">Language</string>
    <string name="download_phrase">Phrase</string>
    <string name="download_genre">Genre</string>
    <string name="download_langA">Language 1</string>
    <string name="download_langB">Language 2</string>
    <string name="download_search">Search</string>
    <string name="download_search_error">Error occurred</string>
    <string name="download_search_noMore">No more libraries</string>
    <string name="download_search_loading">Loading new libraries</string>
    <string name="download_download">Download</string>
    <string name="download_close">Close</string>
    <string name="download_preview">Preview</string>
    <string name="download_preview_download">Downloading preview</string>
    <string name="download_preview_error">Error</string>
    <string name="download_download_startDownload">Downloading</string>
    <string name="download_download_errorDownload">Error</string>
    <string name="download_download_completedDownload">Download complete</string>
    <string name="download_download_finished">Successfully added library</string>
    <string name="schedule_repetition">Schedule repetition</string>
    <string name="schedule_submit">Submit</string>
    <string name="schedule_edit">Edit</string>
    <string name="schedule_delete">Delete</string>
    <string name="schedule_new">New</string>
    <string name="schedule_monday_l1">M</string>
    <string name="schedule_tuesday_l1">T</string>
    <string name="schedule_wednesday_l1">W</string>
    <string name="schedule_thursday_l1">T</string>
    <string name="schedule_friday_l1">F</string>
    <string name="schedule_saturday_l1">S</string>
    <string name="schedule_sunday_l1">S</string>
    <string name="schedule_monday_l2">Mo</string>
    <string name="schedule_tuesday_l2">Tu</string>
    <string name="schedule_wednesday_l2">We</string>
    <string name="schedule_thursday_l2">Th</string>
    <string name="schedule_friday_l2">Fr</string>
    <string name="schedule_saturday_l2">Sa</string>
    <string name="schedule_sunday_l2">Su</string>
    <string-array name="string_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>