<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/main_menu_onlineLib"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_download"
        android:title="@string/memobaselist_setting_onlineLib"/>
    
    <item
        android:id="@+id/main_menu_statistics"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/memobaselist_setting_statistics"/>
    
    <!--  <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/memobaselist_setting_settings"/> -->
    <item
        android:id="@+id/main_menu_about"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/memobaselist_setting_about"/>

</menu>