<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MemoBaseActivity" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#55000000"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/memobase_btnSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/navigation_button"
                android:maxWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/memobase_lblScheduler"
                android:textSize="15sp" />

            <Button
                android:id="@+id/memobase_btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/navigation_button"
                android:maxWidth="100dp"
                android:minHeight="40dp"
                android:text="@string/memobase_lblSave"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55000000"
            android:padding="10dp" >

            <TextView
                android:id="@+id/memobase_lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="memobase_lblTitle"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/memobase_lblTitle"
                android:layout_below="@id/memobase_lblTitle"
                android:layout_marginTop="30dp"
                android:text="@string/memobase_lblCreated"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/memobase_lblCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/textView1"
                android:layout_marginRight="10dp"
                android:text="memobase_lblCreated"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView1"
                android:layout_below="@id/textView1"
                android:layout_marginTop="5dp"
                android:text="@string/memobase_lblLastReviewed"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/memobase_lblLastReviewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/textView2"
                android:layout_marginRight="10dp"
                android:text="memobase_lblLastReviewed"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView2"
                android:layout_below="@id/textView2"
                android:layout_marginTop="5dp"
                android:text="@string/memobase_lblNoAll"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/memobase_lblNoAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/textView3"
                android:layout_marginRight="10dp"
                android:text="memobase_lblNoAll"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView3"
                android:layout_below="@id/textView3"
                android:layout_marginTop="5dp"
                android:text="@string/memobase_lblNoActive"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/memobase_lblNoActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/textView6"
                android:layout_marginRight="10dp"
                android:text="memobase_lblNoActive"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView6"
                android:layout_below="@id/textView6"
                android:layout_marginTop="30dp"
                android:text="@string/memobase_lblName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/memobase_txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView4"
                android:layout_below="@id/textView4"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:imeOptions="actionDone" >
            </EditText>

            <CheckBox
                android:id="@+id/memobase_chbEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/memobase_txtName"
                android:layout_below="@id/memobase_txtName"
                android:layout_marginTop="20dp"
                android:text="@string/memobase_lblActive" />

            <Button
                android:id="@+id/memobase_btnImport"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/memobase_chbEnabled"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/memobase_lblImport"
                android:textSize="20sp" />

            <Button
                android:id="@+id/memobase_btnExport"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/memobase_btnImport"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/memobase_lblExport"
                android:textSize="20sp" />

            <Button
                android:id="@+id/memobase_btnPublish"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/memobase_btnExport"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/memobase_lblPublish"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/memobase_laySaving"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#55000000"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/memobase_lblProcessing"
                    android:textColor="#EEEEEE"
                    android:textSize="25sp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/memobase_layoutLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#DD000000"
        android:padding="10dp"
        android:stretchColumns="1"
        android:visibility="gone" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memobase_lblLibraryName"
                android:textColor="#AAAAAA"
                android:paddingRight="5dp" />

            <TextView
                android:id="@+id/memobase_lblLibraryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#AAAAAA" />

        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memobase_lblGenre"
                android:textColor="#AAAAAA"
                android:paddingRight="5dp"  />

            <Spinner
                android:id="@+id/memobase_cbxGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="5dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memobase_lblDescription"
                android:textColor="#AAAAAA"
                android:paddingRight="5dp"  />

            <EditText
                android:id="@+id/memobase_txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                android:singleLine="false" />

        </TableRow>

        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="5dp" >

            <Button
                android:id="@+id/memobase_btnUpload"
                android:layout_width="wrap_content"
                android:layout_span="2"
                android:text="@string/memobase_btnUpload" />

        </TableRow>
    </TableLayout>

</RelativeLayout>